--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@
 JWT_SECRET=your-super-secret-and-long-random-string
 CLIENT_URL=http://localhost:5173
 PORT=7000
+MONGO_URI=mongodb://127.0.0.1:27017/connect
