--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ JWT_SECRET=your-super-secret-and-long-random-string
 CLIENT_URL=http://localhost:5173
 PORT=5000
 MONGO_URI=mongodb://127.0.0.1:27017/connect
+
+# Admin seeding (used by seedAdmin.ts)
+ADMIN_NAME=Admin
+ADMIN_EMAIL=m2@gmail.com
+ADMIN_PASSWORD=m2k2025
