--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # It is recommended to use a long, random string for the JWT_SECRET
-JWT_SECRET=your-super-secret-and-long-random-string
+JWT_SECRET="your-new-secure-random-string-here"
 CLIENT_URL=http://localhost:5173
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/connect
+MONGO_URL=mongodb://127.0.0.1:27017/connect
 
 # Admin seeding (used by seedAdmin.ts)
 ADMIN_NAME=Admin
